--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
         <div class="text-box">
-            <h1>Bhagwad Geeta</h1>
-            <p>For Those who Understands it's Science</p>
+            <h1>KRISHNAFY</h1>
+            <p>A Comprehensive Platform for Krishna Consciousness</p>
             <a href="question.html"class="hero-btn">Raise Your Arjun</a>
         </div>
     </section>
