--- a/about.html
+++ b/about.html
@@ -48,7 +48,15 @@
 
 <section class="footer">
     <h4>About Us</h4>
-    <p>Hare Krishna!! This is a non-profitable Comunity, <br> Raise your Arjun Know More about Bhagwad Gita <br> Ask Questions and Share your experience with Bhagwad Gita!</p>
+    <p>Welcome to Krishnafy – the ultimate free and open-source platform to dive into the world of Krishna consciousness! Our goal? To make the timeless wisdom of the Bhagavad Gita and Vedic teachings available to everyone, completely free. No strings attached.
+
+Here at Krishnafy, we’re all about spreading the knowledge of A.C. Bhaktivedanta Swami Prabhupada. Whether you’re new to the teachings or a seasoned spiritual seeker, we’ve got tons of amazing resources to guide your journey. From books and audio lectures to inspiring videos and images of Srila Prabhupada’s pastimes – it’s all here, just waiting for you.
+
+We answer the big questions – "What is the purpose of life?", "Why do we suffer?", and "Who is Krishna?" – and tackle the doubts and controversies with crystal-clear, thought-provoking answers.
+
+And the best part? Krishnafy is totally open-source and free for everyone. It's a community-driven platform where you can explore, learn, and grow at your own pace. No barriers, no limits – just pure, unfiltered knowledge to light up your path.
+
+So, come join us! Discover the teachings that can help you live a more peaceful, purposeful, and devotional life.</p>
     <div class="icons">
         <i class="fa fa-facebook"></i>
         <i class="fa fa-instagram"></i>
