--- a/about.html
+++ b/about.html
@@ -39,16 +39,7 @@
     <div class="row">
         <div class="about-col"></div>
         <h1>Shrimad Bhagvad Gita Community </h1>
-        <p> Where you can learn about the module of life(i.e Shremad bhagavad-gita-as-it-is) defined by Lord Krishna him self 5000years ago.</p>
-    </div>
-</section>
-
-
-<!--------Footer----------->
-
-<section class="footer">
-    <h4>About Us</h4>
-    <p>Welcome to Krishnafy – the ultimate free and open-source platform to dive into the world of Krishna consciousness! Our goal? To make the timeless wisdom of the Bhagavad Gita and Vedic teachings available to everyone, completely free. No strings attached.
+        <p>Welcome to Krishnafy – the ultimate free and open-source platform to dive into the world of Krishna consciousness! Our goal? To make the timeless wisdom of the Bhagavad Gita and Vedic teachings available to everyone, completely free. No strings attached.
 
 Here at Krishnafy, we’re all about spreading the knowledge of A.C. Bhaktivedanta Swami Prabhupada. Whether you’re new to the teachings or a seasoned spiritual seeker, we’ve got tons of amazing resources to guide your journey. From books and audio lectures to inspiring videos and images of Srila Prabhupada’s pastimes – it’s all here, just waiting for you.
 
@@ -57,6 +48,15 @@ We answer the big questions – "What is the purpose of life?", "Why do we suffe
 And the best part? Krishnafy is totally open-source and free for everyone. It's a community-driven platform where you can explore, learn, and grow at your own pace. No barriers, no limits – just pure, unfiltered knowledge to light up your path.
 
 So, come join us! Discover the teachings that can help you live a more peaceful, purposeful, and devotional life.</p>
+    </div>
+</section>
+
+
+<!--------Footer----------->
+
+<section class="footer">
+    <h4>About Us</h4>
+    <p>Hare Krishna!! This is a non-profitable Comunity, <br> Raise your Arjun Know More about Bhagwad Gita <br> Ask Questions and Share your experience with Bhagwad Gita!</p>
     <div class="icons">
         <i class="fa fa-facebook"></i>
         <i class="fa fa-instagram"></i>
